keywords_and_genras

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -468,22 +468,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "id": "62d39254-e1d1-4bd9-b269-db6af6fb6066",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Fantasy', 'Drama', 'Thriller', 'Mystery', 'Romance']"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# df['genres'][100]"
+    "df['genres'][100]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "id": "e28558ac-245d-41ce-89a8-687a2cd92603",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'[{\"id\": 270, \"name\": \"ocean\"}, {\"id\": 726, \"name\": \"drug abuse\"}, {\"id\": 911, \"name\": \"exotic island\"}, {\"id\": 1319, \"name\": \"east india trading company\"}, {\"id\": 2038, \"name\": \"love of one\\'s life\"}, {\"id\": 2052, \"name\": \"traitor\"}, {\"id\": 2580, \"name\": \"shipwreck\"}, {\"id\": 2660, \"name\": \"strong woman\"}, {\"id\": 3799, \"name\": \"ship\"}, {\"id\": 5740, \"name\": \"alliance\"}, {\"id\": 5941, \"name\": \"calypso\"}, {\"id\": 6155, \"name\": \"afterlife\"}, {\"id\": 6211, \"name\": \"fighter\"}, {\"id\": 12988, \"name\": \"pirate\"}, {\"id\": 157186, \"name\": \"swashbuckler\"}, {\"id\": 179430, \"name\": \"aftercreditsstinger\"}]'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# df['keywords'][1]"
+    "df['keywords'][1]"
    ]
   },
   {
@@ -493,19 +515,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df['keywords'] = df['keywords'].apply(\n",
-    "#     lambda x: [d['name'] for d in ast.literal_eval(x)] if pd.notnull(x) else []\n",
-    "# )"
+    "df['keywords'] = df['keywords'].apply(\n",
+    "    lambda x: [d['name'] for d in ast.literal_eval(x)] if pd.notnull(x) else []\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "id": "b8b11155-46f0-43f0-a4a6-4df944007a5b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ocean',\n",
+       " 'drug abuse',\n",
+       " 'exotic island',\n",
+       " 'east india trading company',\n",
+       " \"love of one's life\",\n",
+       " 'traitor',\n",
+       " 'shipwreck',\n",
+       " 'strong woman',\n",
+       " 'ship',\n",
+       " 'alliance',\n",
+       " 'calypso',\n",
+       " 'afterlife',\n",
+       " 'fighter',\n",
+       " 'pirate',\n",
+       " 'swashbuckler',\n",
+       " 'aftercreditsstinger']"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# df['keywords'][1]"
+    "df['keywords'][1]"
    ]
   },
   {
